--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
+    <Compile Include="Areas\TD\Controllers\CampStatsController.cs" />
     <Compile Include="Areas\TD\Controllers\ExtAccountsController.cs" />
     <Compile Include="Areas\TD\Controllers\AdvertisersController.cs" />
     <Compile Include="Areas\TD\Controllers\BudgetInfosController.cs" />
@@ -954,6 +955,7 @@
     <Content Include="Areas\TD\Views\Stats\Edit.cshtml" />
     <Content Include="Areas\TD\Views\Campaigns\Pacing2.cshtml" />
     <Content Include="Areas\TD\Views\PlatformBudgetInfos\Edit.cshtml" />
+    <Content Include="Areas\TD\Views\CampStats\Spreadsheet.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
