--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Entities\TD\Advertiser.cs" />
     <Compile Include="Entities\TD\CampaignBudget.cs" />
     <Compile Include="Entities\TD\DailySummary.cs" />
+    <Compile Include="Entities\TD\ExtraItem.cs" />
     <Compile Include="Entities\TD\PlatformAccount.cs" />
     <Compile Include="Entities\Variable.cs" />
     <Compile Include="Entities\WikiPartials\Campaign.cs" />
@@ -215,6 +216,10 @@
     <Compile Include="MigrationsTD\201510151453368_Mig_PlatformBudgetInfo.cs" />
     <Compile Include="MigrationsTD\201510151453368_Mig_PlatformBudgetInfo.Designer.cs">
       <DependentUpon>201510151453368_Mig_PlatformBudgetInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\201511032229487_Mig_ExtraItem.cs" />
+    <Compile Include="MigrationsTD\201511032229487_Mig_ExtraItem.Designer.cs">
+      <DependentUpon>201511032229487_Mig_ExtraItem.cs</DependentUpon>
     </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
@@ -357,6 +362,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201510151453368_Mig_PlatformBudgetInfo.resx">
       <DependentUpon>201510151453368_Mig_PlatformBudgetInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201511032229487_Mig_ExtraItem.resx">
+      <DependentUpon>201511032229487_Mig_ExtraItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
