--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -27,5 +27,6 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net45" />
+  <package id="WatiN" version="2.1.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.9.2" targetFramework="net45" />
 </packages>
