--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Areas\TD\Controllers\MainController.cs" />
     <Compile Include="Areas\TD\Controllers\PlatformBudgetInfosController.cs" />
     <Compile Include="Areas\TD\Controllers\PlatformsController.cs" />
+    <Compile Include="Areas\TD\Controllers\ReportsController.cs" />
     <Compile Include="Areas\TD\Controllers\StatsController.cs" />
     <Compile Include="Areas\TD\Models\AccountMaintenanceVM.cs" />
     <Compile Include="Areas\TD\Models\CampaignPacingVM.cs" />
@@ -964,6 +965,7 @@
     <Content Include="Areas\TD\Views\DailySummaries\Index.cshtml" />
     <Content Include="Areas\TD\Views\CampStats\Daily.cshtml" />
     <Content Include="Areas\TD\Views\CampStats\DailyChart.cshtml" />
+    <Content Include="Areas\TD\Views\Reports\Home.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
