--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
 </packages>
