--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -169,6 +169,11 @@
     <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
     
     
+    <!-- Use the following setting to include zero impression rows when
+         downloading a report. If this setting is commented out, then the server
+         behaves as explained in
+         https://developers.google.com/adwords/api/docs/guides/zero-impression-reports#default_behavior.
+    --><!-- <add key="IncludeZeroImpressions" value="true"/> -->
     <!-- Settings specific to use OAuth2 as authentication mechanism. You could
          run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
          config file.
@@ -216,7 +221,7 @@
     
     
   <!-- Settings related to general library behaviour. --><!-- Use this key to automatically retry a call that failed due to a
-         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1"/> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000"/> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
+         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1"/> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000"/> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="SkipColumnHeader" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
     --><!-- <add key="OAuth2RedirectUri" value="" /> --><!-- Use the following keys if you want to use OAuth2 service account flow.
          You should comment out all the keys for Web / Installed application
