--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -288,6 +288,17 @@
     -->
     <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
 
+    <!-- Use the following setting to include zero impression rows when
+         downloading a report. If this setting is commented out, then the server
+         behaves as explained in
+         https://developers.google.com/adwords/api/docs/guides/zero-impression-reports#default_behavior.
+    -->
+    <!-- <add key="IncludeZeroImpressions" value="true"/> -->
+
+    <!--<add key="SkipReportHeader" value="false" />
+    <add key="SkipReportSummary" value="false" />
+    <add key="SkipColumnHeader" value="false" />-->
+
     <!-- Settings specific to use OAuth2 as authentication mechanism. You could
          run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
          config file.
