add bingads proj to daweb soln

--- a/3/DirectAgents.Web/packages/repositories.config
+++ b/3/DirectAgents.Web/packages/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\..\..\1\DirectAgents.Domain\packages.config" />
   <repository path="..\..\API\AdRoll\packages.config" />
+  <repository path="..\..\API\FacebookAPI\packages.config" />
+  <repository path="..\..\BingAds\packages.config" />
   <repository path="..\..\CakeExtracter.ConsoleApplication\packages.config" />
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\DirectAgents.Web\packages.config" />
