--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -221,6 +221,10 @@
     <Compile Include="MigrationsTD\201511032229487_Mig_ExtraItem.Designer.cs">
       <DependentUpon>201511032229487_Mig_ExtraItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201512101637483_Mig_PlatColMapping.cs" />
+    <Compile Include="MigrationsTD\201512101637483_Mig_PlatColMapping.Designer.cs">
+      <DependentUpon>201512101637483_Mig_PlatColMapping.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -365,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201511032229487_Mig_ExtraItem.resx">
       <DependentUpon>201511032229487_Mig_ExtraItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201512101637483_Mig_PlatColMapping.resx">
+      <DependentUpon>201512101637483_Mig_PlatColMapping.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
