--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Areas\TD\Controllers\EmployeesController.cs" />
     <Compile Include="Areas\TD\Controllers\ExtraItemsController.cs" />
     <Compile Include="Areas\TD\Controllers\MainController.cs" />
+    <Compile Include="Areas\TD\Controllers\PlatColMappingsController.cs" />
     <Compile Include="Areas\TD\Controllers\PlatformBudgetInfosController.cs" />
     <Compile Include="Areas\TD\Controllers\PlatformsController.cs" />
     <Compile Include="Areas\TD\Controllers\ReportsController.cs" />
@@ -970,6 +971,8 @@
     <Content Include="Areas\TD\Views\CampStats\DailyChart.cshtml" />
     <Content Include="Areas\TD\Views\Reports\Home.cshtml" />
     <Content Include="Areas\TD\Views\Platforms\Edit.cshtml" />
+    <Content Include="Areas\TD\Views\PlatColMappings\Edit.cshtml" />
+    <Content Include="Areas\TD\Views\ExtAccounts\UploadStats.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
