Strategy/StrategySummary entities

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -225,6 +225,10 @@
     <Compile Include="MigrationsTD\201512101637483_Mig_PlatColMapping.Designer.cs">
       <DependentUpon>201512101637483_Mig_PlatColMapping.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201512222321389_Mig_Strategy.cs" />
+    <Compile Include="MigrationsTD\201512222321389_Mig_Strategy.Designer.cs">
+      <DependentUpon>201512222321389_Mig_Strategy.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -372,6 +376,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201512101637483_Mig_PlatColMapping.resx">
       <DependentUpon>201512101637483_Mig_PlatColMapping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201512222321389_Mig_Strategy.resx">
+      <DependentUpon>201512222321389_Mig_Strategy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
