--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -973,6 +973,8 @@
     <Content Include="Areas\TD\Views\Platforms\Edit.cshtml" />
     <Content Include="Areas\TD\Views\PlatColMappings\Edit.cshtml" />
     <Content Include="Areas\TD\Views\ExtAccounts\UploadStats.cshtml" />
+    <Content Include="Areas\TD\Views\ExtAccounts\Strategies.cshtml" />
+    <Content Include="Areas\TD\Views\ExtAccounts\TDads.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
