--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -233,6 +233,10 @@
     <Compile Include="MigrationsTD\201601052300172_Mig_TDad.Designer.cs">
       <DependentUpon>201601052300172_Mig_TDad.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201601082136085_Mig_Site.cs" />
+    <Compile Include="MigrationsTD\201601082136085_Mig_Site.Designer.cs">
+      <DependentUpon>201601082136085_Mig_Site.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -386,6 +390,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201601052300172_Mig_TDad.resx">
       <DependentUpon>201601052300172_Mig_TDad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201601082136085_Mig_Site.resx">
+      <DependentUpon>201601082136085_Mig_Site.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
