--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -242,6 +242,10 @@
     <Compile Include="MigrationsTD\201601111845000_Mig_Conv.Designer.cs">
       <DependentUpon>201601111845000_Mig_Conv.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201601291719443_Mig_Conv2.cs" />
+    <Compile Include="MigrationsTD\201601291719443_Mig_Conv2.Designer.cs">
+      <DependentUpon>201601291719443_Mig_Conv2.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -401,6 +405,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201601111845000_Mig_Conv.resx">
       <DependentUpon>201601111845000_Mig_Conv.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201601291719443_Mig_Conv2.resx">
+      <DependentUpon>201601291719443_Mig_Conv2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
