--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -247,6 +247,10 @@
     <Compile Include="MigrationsTD\201601291719443_Mig_Conv2.Designer.cs">
       <DependentUpon>201601291719443_Mig_Conv2.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201602122137175_Mig_MoreColMapping.cs" />
+    <Compile Include="MigrationsTD\201602122137175_Mig_MoreColMapping.Designer.cs">
+      <DependentUpon>201602122137175_Mig_MoreColMapping.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -409,6 +413,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201601291719443_Mig_Conv2.resx">
       <DependentUpon>201601291719443_Mig_Conv2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201602122137175_Mig_MoreColMapping.resx">
+      <DependentUpon>201602122137175_Mig_MoreColMapping.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
