--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -302,6 +302,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seed\TDSeeder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cake.Data.Wsdl\Cake.Data.Wsdl.csproj">
