--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -979,6 +979,7 @@
     <Content Include="Areas\TD\Views\ExtAccounts\IndexGauge.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Strategy.cshtml" />
     <Content Include="Areas\TD\Views\Stats\Creative.cshtml" />
+    <Content Include="Areas\TD\Views\Stats\Site.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
